--- a/lambda-orchestrator/package.json
+++ b/lambda-orchestrator/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "serverless": "^3.40.0",
     "serverless-offline": "^13.3.3"
+  },
+  "dependencies": {
+    "zod": "^4.1.13"
   }
 }
