--- a/orders-api/package.json
+++ b/orders-api/package.json
@@ -14,7 +14,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mysql2": "^3.15.3"
+    "mysql2": "^3.15.3",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
